# pyshell

./: README.md  pyproject.toml
img/: demo.mov
pyshell/: main.py
